--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="#FFFFFF"
-    android:padding="20dp">
-
-    <TextView
-        android:id="@+id/tvNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="40sp"
-        android:textColor="#000000"
-        android:layout_marginBottom="30dp"/>
+             android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:text="@string/main"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            />
 
         <Button
-            android:id="@+id/btnMinus"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:text="-"
-            android:textSize="30sp"/>
-
-        <Button
-            android:id="@+id/btnPlus"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:text="+"
-            android:textSize="30sp"
-            android:layout_marginStart="20dp"/>
+            android:id="@+id/btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/one_button"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:layout_marginTop="20dp"
+            android:background="#FF0000"/>
     </LinearLayout>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
